Fix read_email functionality issues
- Fix data structure inconsistency in getEmailContent response
- Fix URL checking logic for inbox navigation
- Support both #inbox and #all views for email searching

--- a/gmail-mcp-extension/extension/manifest.json
+++ b/gmail-mcp-extension/extension/manifest.json
@@ -16,8 +16,8 @@
   "content_scripts": [
     {
       "matches": ["https://mail.google.com/*"],
-      "js": ["content-simple.js"],
-      "run_at": "document_idle",
+      "js": ["content.js"],
+      "run_at": "document_end",
       "all_frames": false
     }
   ],
