⚠️ Add critical file protection and recovery notice
🚨 IMPORTANT: llms-full.txt was accidentally deleted during cleanup

✅ Added protections:
- IMPORTANT_FILES_NOTE.md with restoration instructions
- Updated .gitignore with critical file preservation guidelines
- Clear warnings about files that should NEVER be deleted

🔧 Recovery needed:
- llms-full.txt needs to be restored from backup or regenerated
- Contains critical LLM model configurations

📋 Prevention measures:
- Added file importance guidelines
- Documented recovery procedures
- Enhanced .gitignore with preservation notes

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,10 @@ gmail-mcp-extension/TEST_CHECKLIST.md
 gmail-mcp-extension/CONNECTION_VERIFICATION.md
 gmail-mcp-extension/CLAUDE_DESKTOP_QUICK_TEST.md
 gmail-mcp-extension/MULTI_ACCOUNT_FIX_SUMMARY.md
+
+# IMPORTANT: DO NOT IGNORE THESE CRITICAL FILES
+# The following files should NEVER be deleted or ignored:
+# - llms-full.txt (LLM model configurations)
+# - *.json configuration files
+# - README.md, SETUP.md, LICENSE files
+# - Core implementation files (*.js, *.py in main directories)
